Update to comment out professor's info until paper  is reviewed

--- a/paper/acm/nid_dataset_features_guidelines.tex
+++ b/paper/acm/nid_dataset_features_guidelines.tex
@@ -144,16 +144,16 @@
   \postcode{01609}
 }
 
-\author{Randy Paffenroth}
-\email{rcpaffenroth@wpi.edu}
-\affiliation{%
-  \institution{Worcester Polytechnic Institute}
-  \streetaddress{100 Institute Road}
-  \city{Worcester}
-  \state{Massachusetts}
-  \country{USA}
-  \postcode{01609}
-}
+%\author{Randy Paffenroth}
+%\email{rcpaffenroth@wpi.edu}
+%\affiliation{%
+%  \institution{Worcester Polytechnic Institute}
+%  \streetaddress{100 Institute Road}
+%  \city{Worcester}
+%  \state{Massachusetts}
+%  \country{USA}
+%  \postcode{01609}
+%}
 
 %%
 %% By default, the full list of authors will be used in the page
